2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement

2009-12-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated documentation: now using new documentation template
	* Updated documentation: removed obsolete information, added small cookbook for extension developers, added tutorials for Oracle and PostgreSQL

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13003: Move back methods belonging to t3lib_sqlparser

2009-12-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12897: Cannot parse SQL hints

2009-11-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12758: Added support for EXISTS (subquery)

2009-11-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.2 [TYPO3 4.3.0]
	* Fixed bug #12800: Add functionality to work with caching framework (support for "IN (subquery)" in where clause)
	* Follow-up of changeset 26118: parts of initial patch for RFC 12231 had actually not been integrated

2009-11-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Cleanup: Reorganized unit-tests

2009-11-25  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.1

2009-11-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit-test for bug #5708: Fieldmapping doesn't work on the "right side" in where clause with table.field
	* Fixed bugs #5044/#11142: Column's default value is not properly quoted in CREATE TABLE
	* Added unit-test for bug #12670: Columns with NOT NULL are created as NULLable

2009-11-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.0 (stable)
	* Updated documentation: updated copyright and refreshed TOC
	* Added unit-test for bug #4466: Index on tx_realurl_uniqalias breaks with DBAL

2009-11-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Now using Core dispatcher for backend module (thanks to Oliver Hader)

2009-11-15  Xavier Perseguers  <typo3@perseguers.ch>
